--- a/index.html
+++ b/index.html
@@ -48,6 +48,47 @@
                 </div>
             </div>
             <hr>
+            <div class="top-blogs">
+                <h2 class="section-title">Top Blogs</h2>
+                <div class="blogs">
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">February Picks: Icecream UI/UX Guidelines</h3>
+                            <p class="author">By <a href="">Samantha Reele</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">Advanced Photo Theory & Photo-Ready Actions</h3>
+                            <p class="author">By <a href="">Natasha Sienna</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">A Story Behind The Shapes From The Websites</h3>
+                            <p class="author">By <a href="">John Marshton</a></p>
+                        </div>
+                    </article>
+                    <article class="blog">
+                        <div class="thumbnail">
+                            <img src="./images/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="blog-info">
+                            <h3 class="blog-title">How Opacity Performs Into Webpapers</h3>
+                            <p class="author">By <a href="">David Adams</a></p>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </section>
     </main>
 </body>
