--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader Board</title>
+    <!-- Developed by Md. Shohanur Rahman -->
     <!-- stylesheet -->
     <link rel="stylesheet" href="./styles/style.css">
 </head>
@@ -89,6 +90,11 @@
                     </article>
                 </div>
             </div>
+        </section>
+
+        <!-- latest courses -->
+        <section class="container">
+            <h2 class="section-title">Latest Courses</h2>
         </section>
     </main>
 </body>
