--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <img src="./images/courses/course-1.png" alt="">
                     </div>
                     <div class="course-detail">
-                        <h3 class="course-title">React - The Complete Guide 2022</h3>
+                        <h3 class="course-title">React - The Complete Guide</h3>
                         <p class="course-author">Reele Klaife</p>
                         <div class="course-info">
                             <div>
@@ -118,6 +118,54 @@
                             <div class="course-duration">
                                 <i class="fa-regular fa-clock"></i>
                                 <span class="time">01:45hr</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-2.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">Microsoft PowerPoint Master Course</h3>
+                        <p class="course-author">Sarah Konton</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                <span class="time">01:15hr</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-banner">
+                        <img src="./images/courses/course-3.png" alt="">
+                    </div>
+                    <div class="course-detail">
+                        <h3 class="course-title">Modern JavaScript Course</h3>
+                        <p class="course-author">Kevin Hacks</p>
+                        <div class="course-info">
+                            <div>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star filled"></i>
+                                <i class="fa-solid fa-star empty"></i>
+                                <span>4.5</span>
+                            </div>
+                            
+                            <div class="course-duration">
+                                <i class="fa-regular fa-clock"></i>
+                                <span class="time">02:25hr</span>
                             </div>
                         </div>
                     </div>
