--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </section>
 
         <!-- latest courses -->
-        <section class="container">
+        <section class="container last">
             <h2 class="section-title">Latest Courses</h2>
             <div class="courses">
                 <div class="course">
